2010-11-01  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        blendFunc should generate INVALID_OPERATION if constant color and constant alpha are together as source and destination factors
        https://bugs.webkit.org/show_bug.cgi?id=48674

        Test: fast/canvas/webgl/webgl-specific.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::blendFunc):
        (WebCore::WebGLRenderingContext::blendFuncSeparate):
        * html/canvas/WebGLRenderingContext.h:
        (WebCore::WebGLRenderingContext::validateBlendFuncFactors): Helper function to do the checking.
2010-11-01  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        blendFunc should generate INVALID_OPERATION if constant color and constant alpha are together as source and destination factors
        https://bugs.webkit.org/show_bug.cgi?id=48674

        * fast/canvas/webgl/webgl-specific-expected.txt: Added.
        * fast/canvas/webgl/webgl-specific.html: Added.


Canonical link: https://commits.webkit.org/61679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71185 268f45cc-cd09-0410-ab3c-d52691b4dbfc